--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "engines": {
+    "node": "14.5.0",
+    "yarn": "1.22.5"
+  },
   "name": "tech-journal-client",
   "version": "0.1.0",
   "private": true,
@@ -12,7 +16,8 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
