--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "dependencies": {
     "@iconify/icons-bytesize": "^1.0.3",
+    "@iconify/icons-si-glyph": "^1.0.5",
     "@iconify/react": "^1.1.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
